<resources>
    <string name="app_name">Griya Kuliner\'s Review</string>
    <string name="banner">Banner</string>
    <string name="bakso">Bakso</string>
    <string name="deskripsi_bakso">Bakso adalah jenis bola daging yang lazim ditemukan pada masakan Indonesia. Bakso umumnya dibuat dari campuran daging sapi giling dan tepung tapioka, tetapi ada juga bakso yang terbuat dari daging ayam, babi, ikan, udang, kambing, bahkan daging kerbau. Wikipedia</string>
    <string name="icon_star">Icon Star</string>
    <string name="foto">foto</string>
    <string name="rating">4.9</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Tambah Menu</string>
    <string name="nama_menu">Nama Menu</string>
    <string name="reviews">Reviews</string>
    <string name="nabila">Nabila</string>
    <string name="ulasan">Rasanya Enak</string>
    <string name="input_username">Username</string>
    <string name="login">Login</string>
    <string name="icon_login">Icon Login</string>
    <string name="bottom">Bottom</string>
    <string name="feedback">Berikan Ulasan</string>
    <string name="write_feedback">Tuliskan Ulasan Anda</string>
    <string name="send">Kirim</string>
    <string name="add_review">Add Review</string>
    <string name="failed_id">Failed to generate menu ID</string>
    <string name="upload_failed">Upload failed: %1$s</string>
    <string name="image_unselected">Please select an image</string>
    <string name="upload_successful">Upload successful</string>
    <string name="star">star</string>
    <string name="logout">Logout</string>
    <string name="edit_username">Edit Username</string>
    <string name="delete">Hapus Menu</string>
    <string name="save_changes">Simpan Perubahan</string>
    <string name="price">Harga</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="logout_success">Logout Berhasil</string>
    <string name="logout_confirm">Anda yakin ingin keluar?</string>
    <string name="delete_menu">Hapus Menu</string>
    <string name="delete_confirm">Anda yakin ingin menghapus menu?</string>
    <string name="delete_success">Menu Berhasil Dihapus</string>
    <string name="rp">Rp. </string>
    <string name="failed_to_retrieve_data">Failed to retrieve data</string>
    <string name="edit_username_success">Username Berhasil Diubah</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="register"> Register</string>
    <string name="create_acc">Belum Punya Akun?</string>
    <string name="have_acc">Sudah Punya Akun?</string>
    <string name="create_acc_success">Akun Berhasil Dibuat, Silahlan Login</string>
    <string name="login_success">Login Berhasil</string>
    <string name="empty_email_password">Email dan Password Kosong</string>
    <string name="enter_email">Enter email address</string>
    <string name="invalid_email">Invalid email entered</string>
    <string name="enter_password">Enter password</string>
    <string name="invalid_password">Your password must be at least 6 characters</string>
    <string name="background">Background</string>
    <string name="logo">Logo</string>
    <string name="input_new_username">Masukkan Username Baru</string>
    <string name="failed_to_compress_image">Gagal Mengkompres Foto</string>

</resources>