<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blur"
    android:id="@+id/reviewLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:cardCornerRadius="15dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/star1"
                    style="@style/Star" />

                <ImageView
                    android:id="@+id/star2"
                    style="@style/Star" />

                <ImageView
                    android:id="@+id/star3"
                    style="@style/Star" />

                <ImageView
                    android:id="@+id/star4"
                    style="@style/Star" />

                <ImageView
                    android:id="@+id/star5"
                    style="@style/Star" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_feedback"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/btPostReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>
