<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="13dp"
    android:id="@+id/itemMenu"
    android:backgroundTint="@color/dark_green"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/add_photo"
                android:scaleType="centerCrop"
                android:contentDescription="@string/foto" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/menuName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bakso"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="13.000"
                android:textColor="@color/yellow"/>

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:text="@string/deskripsi_bakso"
                android:layout_marginBottom="10dp"
                android:paddingTop="5dp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

