<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="serif"
                    android:text="@string/app_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorSecondary"/>

                <ImageView
                    android:id="@+id/editMenu"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/edit_username"
                    app:tint="?attr/colorSecondary"
                    android:gravity="end"/>

                <ImageView
                    android:id="@+id/delete"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/delete"
                    app:tint="?attr/colorSecondary"
                    android:gravity="end"/>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="340dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:cardCornerRadius="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp">
                    <ImageView
                        android:id="@+id/photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/foto"
                        android:scaleType="centerCrop"
                        android:src="@drawable/add_photo" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/addReview"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|end"
                    android:backgroundTint="@color/dark_green"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp">
                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/add_review"
                        android:src="@drawable/add_review"
                        android:layout_margin="10dp"
                        app:tint="@color/white" />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="310dp"
                    android:text="@string/bakso"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="90dp"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp"
                    android:textStyle="bold"
                    android:textColor="@color/green"/>
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:textStyle="bold"
                    android:textColor="@color/green"/>
            </LinearLayout>

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi_bakso"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reviews"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviews"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                tools:listitem="@layout/item_review"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="120dp"
        android:layout_gravity="center|bottom"
        android:indeterminateTint="@color/black" />

    <include
        android:id="@+id/review"
        layout="@layout/add_review"
        android:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

