<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:fontFamily="serif"
            android:text="@string/upload"
            android:textSize="20sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/add_photo"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/foto"/>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtMenuName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/nama_menu"
                        android:singleLine="true"
                        android:nextFocusDown="@+id/tvPrice"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPrice"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/price"
                        android:singleLine="true"
                        android:nextFocusDown="@+id/tvDesc"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDesc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/deskripsi"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/addMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/upload"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/dark_green"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:indeterminateTint="?attr/colorSecondary"
                android:layout_marginTop="100dp"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>